Center image and tagline

--- a/index.html
+++ b/index.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
 <html>
-<head> </head>
-<body> 
-<img src="Plank.jpg" alt="">
+<head> 
+ <link rel="stylesheet" href="style.css">
+</head>
+<body>
+<div id="container">
+<img id="logo"src="Plank.jpg" alt="">
 <h1> Those who mind dont matter, and those who matter don't mind.</h1>
+</div>
 </body>
-
 </html>
